[project]
name = "fastapi-tuiwen"
version = "0.1.0"
description = "FastAPI API for Tuiwen"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "fastapi[all]>=0.115.13",
    "pillow>=11.2.1",
    "pydantic-settings>=2.9.1",
    "pyfiglet>=1.0.3",
    "pyjwt>=2.10.1",
    "pytz>=2025.2",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.3",
]
